# llama.cpp

./: .gitmodules  CMakeLists.txt  run_vicuna_13b.bat
examples/: common.cpp  common.h
examples/main/: CMakeLists.txt  main.cpp
prompts/: vicuna.txt  vicuna_simple.txt
